# ccode-win7

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.claude/: settings.local.json
analysis/: claude-code-agent-loop-analysis.md  claude-code-context-management-analysis.md  claude-code-frontend-analysis.md  opencode-analysis.md  opencode-deep-dive.md  opencode-permission-sandbox.md  openhands-analysis.md  openhands-deep-dive.md  openhands-sandbox-security.md  roo-code-architecture.md  roo-code-deep-dive.md  roo-code-permission-sandbox.md
config/: config.json.template
docs/: DOCUMENTATION_ALIGNMENT_REPORT.md  architecture-new.md  architecture_plan.md  clang-integration-plan.md  configuration-guide.md  context-loop-handoff-plan.md  context-loop-handoff-status.md  context-management-design.md  context-management-research.md  design-change-log.md  development-tracker.md  frontend-protocol.md  gui-packaging.md  harness-state-machine.md  implementation-roadmap.md  intranet-deployment.md  llm-adapter.md  mode-schema.md  offline-packaging-guide.md  offline-packaging.md  overall-solution-architecture.md  permission-model.md  phase3_continuation.md  phase6-validation.md  query-context-redesign.md  tool-contracts.md  tool-design-spec.md  tui-information-architecture.md  win7-gui-validation.md  win7-preflight-checklist.md
scripts/: activate-bundled-llvm.ps1  bootstrap-dev-env.ps1  build-offline-bundle.ps1  check-bundle-dependencies.py  export-dependencies.py  offline-assets.json  package-lib.ps1  package.config.json  package.ps1  prepare-offline.ps1  test-bundled-llvm.ps1  (+4 more)
(+209 files in other folders)
